# SubtitleToolkit

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  Resources.qrc
SubtitleToolkit/: AboutDialog.cpp  AboutDialog.ui  AppInfo.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Recourses.rc  Resources.qrc  SubParser.cpp  SubParser.h  SubtitleItem.cpp  SubtitleItem.h  SubtitleToolkit.pro  UndoItem.h  main.cpp  version.h
SubtitleToolkit/Assets/: colored-icon.icns  splash.psd
SubtitleWorkshop/: Resources.qrc  SubtitleWorkshop.pro  aboutdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  subparser.cpp  subparser.h  subtitleitem.cpp  undoitem.cpp  undoitem.h  version.h
assets/: subtoolkit-icon.psd
cmake/: FindLibVLC.cmake  MacosAppBundle.plist.in
forms/: AboutDialog.ui  MainWindow.ui
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AppInfo.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MediaPlayer.cpp  MediaPlayer.h  Recourses.rc  Resources.qrc  SubParser.cpp  SubParser.h  SubtitleItem.cpp  SubtitleItem.h  SubtitleTextHighlighter.cpp  SubtitleTextHighlighter.h  SubtitleToolkit.pro  UndoItem.cpp  UndoItem.h  main.cpp  version.h
src/Assets/: icon.icns  splash.psd  subtoolkit-colored-icon.psd
xcode/: .gitignore  CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ReRunCMake.make
xcode/SubStudio.xcodeproj/: project.pbxproj
xcode/SubStudio.xcodeproj/project.xcworkspace/xcuserdata/basiles.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/SubStudio.xcodeproj/xcuserdata/basiles.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/SubStudio_autogen/: moc_predefs_Debug.h  mocs_compilation.cpp
xcode/SubStudio_autogen/Forms/: ui_AboutDialog.h  ui_MainWindow.h
xcode/SubStudio_autogen/include_Debug/UVLADIE3JM/: moc_AboutDialog.cpp  moc_AboutDialog.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_SubtitleTextHighlighter.cpp  moc_SubtitleTextHighlighter.cpp.d
